--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -1,3 +1,28 @@
+- if admin? and session[:view_task] == 'payment'
+  :javascript
+    $(function() {
+    var dates = $( "#from, #to" ).datepicker({
+      defaultDate: "+1w",
+      changeMonth: true,
+      numberOfMonths: 2,
+      dateFormat: "yy/mm/dd",
+      onSelect: function( selectedDate ) {
+        var option = this.id == "from" ? "minDate" : "maxDate",
+          instance = $( this ).data( "datepicker" ),
+          date = $.datepicker.parseDate(
+            instance.settings.dateFormat ||
+            $.datepicker._defaults.dateFormat,
+            selectedDate, instance.settings );
+          dates.not( this ).datepicker( "option", option, date );
+        }
+      });
+    });
+  - form_tag :controller => 'board', :action => 'range_task' do
+    = t 'global.from'
+    = text_field_tag 'from', '', {:size=>10, :class => 'validate[required]'}
+    = t 'global.to'
+    = text_field_tag 'to', '', {:size=>10, :class => 'validate[required]'}
+    = submit_tag t('global.show')
 .bordershape
   = convert_shop_type('taobao')
   = '-' + t('task.normal_task')
@@ -11,12 +36,6 @@
   = image_tag('do.png')
   = '-' + t('task.do')
 - if admin? or manager? or session[:view_task] == 'manage'
-  .bordershape
-    = image_tag('edit.png')
-    = '-' + t('global.edit')
-    \|
-    = image_tag('delete.png')
-    = '-' + t('global.delete')
   %table
     %caption
       /=t('site.task')
