--- a/app/views/account/charge.html.haml
+++ b/app/views/account/charge.html.haml
@@ -1,11 +1,11 @@
 #mainframe
   .bordershape
-    - form_tag :action=>'process_charge', do
+    - form_tag( {:action=>'process_charge'}, :id=>'charge') do
       = label_tag t('trade.transaction_id')
       = text_field_tag 'transaction_id'
       %br
       = label_tag t('account.charge_amount')
-      = select_tag 'amount', options_for_select([100,200,500,1000,2000,5000]), :class=>'validate[require]'
+      = select_tag 'amount', options_for_select([100,200,300,500,800,1000,2000]), :class=>"validate[require],custom[number],min[100],max[2000]"
       =# number_field_tag 'amount', :class=>'validate[require]'
       %br
       = submit_tag t('account.charge')
