--- a/app/views/site/setting.html.haml
+++ b/app/views/site/setting.html.haml
@@ -74,7 +74,7 @@
     .bordershape
       %li
         = label_tag t('setting.recyling_point')
-        = number_field_tag 'setting[reclyling_point]', @setting.recyling_point
+        = number_field_tag 'setting[recyling_point]', @setting.recyling_point
       %li
         = label_tag t('setting.recyling_point_ratio')
         = number_field_tag 'setting[recyling_point_ratio]', @setting.recyling_point_ratio
